[package]
name = "acmex"
version = "0.0.1"
edition = "2024"
description = "A simple ACME client for obtaining TLS certificates"
license = "MIT OR Apache-2.0"
authors = ["houseme <housemecn@gmail.com>"]
homepage = "https://houseme.github.io/acmex"
repository = "https://github.com/houseme/acmex"
documentation = "https://docs.rs/acmex"
keywords = ["acme", "tls", "certificate", "https"]
readme = "README.md"
categories = ["web-programming", "api-bindings", "asynchronous", "cryptography", "network-programming"]

[dependencies]
async-trait = { version = "0.1.89" }
axum = { version = "0.8.7" }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.42" }
clap = { version = "4.5.53", features = ["derive"] }
hickory-resolver = { version = "0.25.2" }
pem = { version = "3.0.6" }
prometheus = { version = "0.14.0" }
reqwest = { version = "0.12.25", features = ["json", "charset", "http2", "macos-system-configuration", "rustls-tls", "hickory-dns", "gzip"] }
rcgen = { version = "0.14.6" }
ring = { version = "0.17.14" }
rustls = { version = "0.23.35" }
rustls-pki-types = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.15.1" }
tracing = { version = "0.1.43" }
tracing-subscriber = { version = "0.3.22" }
x509-parser = { version = "0.18.0" }


[dependencies.redis]
version = "1.0.1"
features = ["tokio-comp", "cache-aio", "connection-manager"]
optional = true

[features]
default = ["redis"]
redis = ["dep:redis"]
google-ca = []
zerossl-ca = []

[dev-dependencies]
tokio = { version = "1.48.0", features = ["test-util"] }
