[package]
name = "acmex"
version = "0.7.0"
edition = "2024"
rust-version = "1.92.0"
description = "A comprehensive ACME v2 client for obtaining TLS certificates"
license = "MIT OR Apache-2.0"
authors = ["houseme <housemecn@gmail.com>"]
homepage = "https://houseme.github.io/acmex"
repository = "https://github.com/houseme/acmex"
documentation = "https://docs.rs/acmex"
keywords = ["acme", "tls", "certificate", "https"]
readme = "README.md"
categories = ["web-programming", "api-bindings", "asynchronous", "cryptography", "network-programming"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
jiff = { version = "0.2.19", features = ["serde"] }
hex = "0.4"
hickory-resolver = { version = "0.25", features = ["serde"] }
hmac = { version = "0.13.0-rc.5" }
pem = "3.0"
prometheus = "0.14"
rand = "0.10.0-rc.9"
rcgen = { version = "0.14", features = ["crypto", "aws_lc_rs", "pem"], default-features = false }
regex = "1.12"
reqwest = { version = "0.13", features = ["json", "rustls", "http2", "gzip"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0-rc.5"
thiserror = "2.0"
toml = "0.9.11"
tokio = { version = "1.49", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.31"
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
urlencoding = "2.1"
x509-parser = "0.18"

# 加密后端 - 优先使用 aws-lc-rs
[dependencies.aws-lc-rs]
version = "1.15.4"
optional = true
features = ["fips"]

[dependencies.ring]
version = "0.17"
optional = true

# DNS 解析
[dependencies.hickory-proto]
version = "0.25"

# AWS SDK for Route53
[dependencies.aws-config]
version = "1.8"
optional = true

[dependencies.aws-sdk-route53]
version = "1.106"
optional = true

# HTTP 服务器
[dependencies.hyper]
version = "1.8"

# Redis 可选支持
[dependencies.redis]
version = "1.0.3"
features = ["tokio-comp", "connection-manager", "aio"]
optional = true

[features]
default = ["aws-lc-rs"]
aws-lc-rs = ["dep:aws-lc-rs"]
ring-crypto = ["dep:ring"]
redis = ["dep:redis"]
google-ca = []
zerossl-ca = []

dns-cloudflare = []
dns-route53 = ["dep:aws-config", "dep:aws-sdk-route53"]
dns-digitalocean = []
dns-linode = []
dns-azure = []
dns-google = []
dns-alibaba = []
dns-godaddy = []
dns-tencent = []
dns-huawei = []
dns-cloudns = []

metrics = []
cli = []

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockito = "1.4"
hex = "0.4.3"
temp-env = "0.3"
tower = { version = "0.5", features = ["util"] }
