[package]
name = "acmex"
version = "0.8.0"
edition = "2024"
rust-version = "1.93.0"
description = "AcmeX: High-performance, extensible ACME v2 (RFC 8555) client and server in Rust, supporting multiple DNS providers, storage backends, and crypto libraries."
license = "MIT OR Apache-2.0"
authors = ["houseme <housemecn@gmail.com>"]
homepage = "https://houseme.github.io/acmex"
repository = "https://github.com/houseme/acmex"
documentation = "https://docs.rs/acmex"
keywords = ["acme", "tls", "certificate", "https", "letsencrypt"]
readme = "README.md"
categories = ["web-programming", "api-bindings", "asynchronous", "cryptography", "network-programming"]

[dependencies]
# Core Async & Runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Web & API Server
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.13", features = ["json", "gzip", "query", "form", "blocking"] }
urlencoding = "2.1"

# Cryptography & Security
rcgen = { version = "0.14", features = ["crypto", "aws_lc_rs", "pem"], default-features = false }
x509-parser = "0.18"
pem = "3.0"
base64 = "0.22"
hex = "0.4"
hmac = { version = "0.13.0-rc.5" }
sha1 = "0.11.0-rc.5"
sha2 = "0.11.0-rc.5"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"] }
tokio-rustls = "0.26"

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.2"

# Observability & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
prometheus = "0.14"

# DNS & Networking
hickory-resolver = { version = "0.25", features = ["serde"] }

# Utilities
clap = { version = "4.5", features = ["derive"] }
jiff = { version = "0.2.20", features = ["serde"] }
rand = "0.10.0"
regex = "1.12"

# Error Handling
thiserror = "2.0"

# --- Optional Dependencies & Feature-gated Backends ---

# Crypto Backends
aws-lc-rs = { version = "1.16.0", optional = true, features = ["fips"] }
ring = { version = "0.17", optional = true }

# AWS Route53 Support
aws-config = { version = "1.8", optional = true }
aws-sdk-route53 = { version = "1.108", optional = true }

# Storage Backends
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager", "aio"], optional = true }

[features]
default = ["aws-lc-rs"]
aws-lc-rs = ["dep:aws-lc-rs"]
ring-crypto = ["dep:ring"]
redis = ["dep:redis"]
google-ca = []
zerossl-ca = []

dns-cloudflare = []
dns-route53 = ["dep:aws-config", "dep:aws-sdk-route53"]
dns-digitalocean = []
dns-linode = []
dns-azure = []
dns-google = []
dns-alibaba = []
dns-godaddy = []
dns-tencent = []
dns-huawei = []
dns-cloudns = []

metrics = []
cli = []

[dev-dependencies]
mockito = "1.7"
hex = "0.4.3"
tower = { version = "0.5", features = ["util"] }
